package eapli.base.warehouse.domain;

import eapli.framework.domain.model.ValueObject;

public class Dashboard implements ValueObject {

}
